fixed alignment of dashboard

--- a/executor/main/static/style.css
+++ b/executor/main/static/style.css
@@ -14,7 +14,7 @@ Lightest Grey for BG: rgba(242,242,242);
 
 h1, h2, h3, h4, h5, p {
 	color: #858585;
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Roboto','Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 body {
@@ -46,22 +46,32 @@ a:hover {
 	max-height: 25px;
 }
 
-.card {
-	display: inline;
-	margin-top: 15px;
-	margin-bottom: 15px;
-	background-color: #ffffff;
-	height: 400px;
-}
-
 .dashboard {
 	width: 100%;
 	height: 1200px;
 }
 .notifs-left {
-	width: 75%;
+	position: absolute;
+	top: 150px;
+
+	width: 55%;
+	height: 400px;
+
 }
 
 .notifs-right {
+	position: absolute;
+	top: 150px;
+	left: 67.5%;
 	width: 25%;
+
+	height: 400px;
+}
+
+.contracts-list {
+	position: absolute;
+	top: 600px;
+	height: 400px;
+	width: 84.5%;
+	display: inline-block;
 }
